# shellpad

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_config.cfg
shellpad/: main.py
